# PseduoColorStudio

./: .gitignore  README.md  ReadMe.txt  __init__.py  app.py  main.py  pyproject.toml  requirements.txt  training.ipynb
algorithms/: __init__.py  cnn.py  lut.py  mapping.py  slicing.py  utils.py
ui/: __init__.py  controls.py  previews.py  toolbar.py
